--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FA portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-benner">
+        <div class="half w"> 
+            <div class="side">
+                <H1>Welcome To</H1>
+                <h1><span class="color">KIRSATANG</span> JUNGLE</h1>
+                <H3>MIDDLE OF NO-WHERE</H3>
+                <p>You do it for the highs, when you're totally engrossed and everything's flowing and whatever you want, you get. It's like magic. That's why you play the game. That's what it's for. That's why you work.It's about you. If you win, it's you; if you lose, it's you. Black and white. Nowhere to hide.</p>
+                <a target="_blank" href="https://www.facebook.com/fa.forhad.81495">VISIT ME</a>
+            </div>
+        </div>                
+        <div class="half w">
+            <img src="images/myDDD-bg.png" alt="">    
+        </div>
+    </section>
 </body>
 </html>
