--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
             </div>
         </div>                
         <div class="half w">
-            <img src="images/myDDD-bg.png" alt="">    
+            <img src="images/myDDD-bg.png" alt=""> 
+        </div>
+    </section>
+    <section class="mid-benner">
+        <div class="half w">
+            <img src="IMAGES/my-bgQ2.png">
+        </div>
+
+        <div class="side-OK">
+            <h1> <span class="CLR">EXPLORE</span> UNSEEN</h1>
+            <h3> BECOME A VENTURE</h3>
+            <p>To sink denture into an adventure that is an obvious misadventure is a venture in futility.f an unexecuted idea still lingering on in your mind, the idea must be worth taking the risk.</p>
+            <a target="_blank" href="https://bn.wikipedia.org/wiki/%E0%A6%AC%E0%A6%BE%E0%A6%A8%E0%A7%8D%E0%A6%A6%E0%A6%B0%E0%A6%AC%E0%A6%BE%E0%A6%A8_%E0%A6%9C%E0%A7%87%E0%A6%B2%E0%A6%BE">EXPLORE MORE</a>
         </div>
     </section>
 </body>
