--- a/index.html
+++ b/index.html
@@ -37,5 +37,17 @@
             <a target="_blank" href="https://bn.wikipedia.org/wiki/%E0%A6%AC%E0%A6%BE%E0%A6%A8%E0%A7%8D%E0%A6%A6%E0%A6%B0%E0%A6%AC%E0%A6%BE%E0%A6%A8_%E0%A6%9C%E0%A7%87%E0%A6%B2%E0%A6%BE">EXPLORE MORE</a>
         </div>
     </section>
+    <section class="exp">
+        <div>
+            <h1>FULL STACK DEVELOPER</h1>
+            <H3>2022-PRESENT | PRO LEVEL DEVELOPER</H3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div>
+            <H1>BABY WEB DEVELOPER</H1>
+            <H3>2021-2022 | WEB DEVELOPER LERNER</H3>
+            <P>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</P>
+        </div>
+    </section>
 </body>
 </html>
